--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
     "@rainbow-me/rainbowkit": "^1.3.0",
     "lucide-react": "^0.294.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.1.0"
+    "tailwind-merge": "^2.1.0",
+    "@stellar/freighter-api": "^4.1.0",
+    "@stellar/stellar-sdk": "^13.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
