--- a/contracts/package.json
+++ b/contracts/package.json
@@ -7,14 +7,15 @@
     "test": "hardhat test",
     "deploy": "hardhat run scripts/deploy.ts",
     "deploy:sepolia": "hardhat run scripts/deploy.ts --network sepolia",
-    "deploy:mainnet": "hardhat run scripts/deploy.ts --network mainnet", 
+    "deploy:mainnet": "hardhat run scripts/deploy.ts --network mainnet",
     "verify": "hardhat verify",
     "clean": "hardhat clean && rm -rf artifacts cache",
     "lint": "solhint 'contracts/**/*.sol'",
     "coverage": "hardhat coverage"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.0"
+    "@openzeppelin/contracts": "^5.0.0",
+    "dotenv": "^16.3.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
@@ -28,9 +29,9 @@
   "keywords": [
     "ethereum",
     "solidity",
-    "smart-contracts", 
+    "smart-contracts",
     "htlc",
     "cross-chain",
     "defi"
   ]
-} 
+}
