--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "workspaces": [
     "contracts",
-    "stellar", 
+    "stellar",
     "relayer",
     "frontend"
   ],
@@ -26,9 +26,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
     "eslint": "^8.56.0",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "typescript": "^5.3.0"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -50,5 +50,12 @@
     "ethglobal"
   ],
   "author": "FusionBridge Team",
-  "license": "MIT"
-} 
+  "license": "MIT",
+  "dependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "relayer": "1.0.0-beta"
+  }
+}
