--- a/relayer/tsconfig.json
+++ b/relayer/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "allowJs": true,
-    "strict": true,
+    "strict": false,
     "noEmit": false,
     "declaration": true,
     "outDir": "./dist",
