--- a/contracts/package.json
+++ b/contracts/package.json
@@ -8,6 +8,8 @@
     "deploy": "hardhat run scripts/deploy.ts",
     "deploy:sepolia": "hardhat run scripts/deploy.ts --network sepolia",
     "deploy:mainnet": "hardhat run scripts/deploy.ts --network mainnet",
+    "deploy:phase6": "hardhat run scripts/deploy-phase6.ts --network hardhat",
+    "deploy:sepolia:phase6": "hardhat run scripts/deploy-sepolia-phase6.ts --network sepolia",
     "verify": "hardhat verify",
     "clean": "hardhat clean && rm -rf artifacts cache",
     "lint": "solhint 'contracts/**/*.sol'",
