--- a/relayer/package.json
+++ b/relayer/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fusionbridge/contracts": "workspace:*",
     "@fusionbridge/stellar": "workspace:*",
+    "@stellar/stellar-sdk": "^11.2.0",
     "ethers": "^6.9.0",
     "dotenv": "^16.3.0",
     "winston": "^3.11.0"
