--- a/relayer/package.json
+++ b/relayer/package.json
@@ -16,6 +16,7 @@
     "@fusionbridge/contracts": "workspace:*",
     "@fusionbridge/stellar": "workspace:*",
     "@stellar/stellar-sdk": "^11.3.0",
+    "axios": "^1.10.0",
     "dotenv": "^16.3.0",
     "ethers": "^6.9.0",
     "winston": "^3.11.0"
