Rename project from FusionBridge to OverSync, updating all relevant files including package.json, README.md, and frontend components. Adjust descriptions, repository URLs, and author names to reflect the new branding. Enhance UI elements and styles for consistency with the new branding, including logo updates and color scheme adjustments.

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@fusionbridge/contracts",
+  "name": "@oversync/contracts",
   "version": "1.0.0",
-  "description": "Ethereum smart contracts for FusionBridge cross-chain token swaps",
+  "description": "Ethereum smart contracts for OverSync cross-chain token swaps",
   "scripts": {
     "compile": "hardhat compile",
     "test": "hardhat test",
