--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fusionbridge",
+  "name": "oversync",
   "version": "1.0.0",
   "description": "Cross-chain token bridge between Ethereum and Stellar using Fusion+ architecture with HTLC mechanism",
   "type": "module",
@@ -44,7 +44,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/fusionbridge.git"
+    "url": "https://github.com/your-username/oversync.git"
   },
   "keywords": [
     "cross-chain",
@@ -57,7 +57,7 @@
     "1inch",
     "ethglobal"
   ],
-  "author": "FusionBridge Team",
+  "author": "OverSync Team",
   "license": "MIT",
   "dependencies": {
     "@types/cors": "^2.8.19",
