Revert to pnpm with proper Vercel config and workspace dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@oversync/contracts": "workspace:*",
+    "@oversync/stellar": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
