--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cd frontend && pnpm install --no-frozen-lockfile && pnpm run build",
-  "outputDirectory": "frontend/dist",
+  "buildCommand": "pnpm install --no-frozen-lockfile && pnpm run build",
+  "outputDirectory": "dist",
   "installCommand": "npm install -g pnpm@latest",
   "framework": "vite",
   "rewrites": [
