--- a/relayer/package.json
+++ b/relayer/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@stellar/stellar-sdk": "^11.3.0",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.0",
     "ethers": "^6.9.0",
+    "express": "^4.18.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
